myteo/test/analyze/type_check/adt/enum_variant_inference.exp
Error: Expected type `Option<a>` but found `Int`
test/analyze/type_check/adt/enum_variant_inference.myte:16:10
 16 |   None == 1;
    |           ^